--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,8 @@
-# Build stage
-FROM node:18-alpine AS build
+# Use Node.js image
+FROM node:18-alpine
 
-WORKDIR /app
+# Create app directory
+WORKDIR /usr/src/app
 
 # Copy package files
 COPY package*.json ./
@@ -9,16 +10,8 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
-# Copy the rest of the application
+# Bundle app source
 COPY . .
-
-# Production stage
-FROM node:18-alpine
-
-WORKDIR /app
-
-# Copy built files from build stage
-COPY --from=build /app .
 
 # Expose the port the app runs on
 EXPOSE 3000
